--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '3.8'
-
 services:
   # Milvus 向量数据库
   milvus:
-    image: milvusdb/milvus:v2.3.4
+    image: milvusdb/milvus:v2.3.0
     container_name: milvus
     ports:
       - "19530:19530"
@@ -17,6 +15,7 @@ services:
     depends_on:
       - etcd
       - minio
+    restart: unless-stopped
 
   # etcd 服务
   etcd:
@@ -30,20 +29,22 @@ services:
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
     volumes:
       - etcd_data:/etcd
+    restart: unless-stopped
 
   # MinIO 对象存储
   minio:
-    image: minio/minio:RELEASE.2023-03-20T20-16-18Z
+    image: minio/minio:latest
     container_name: minio
     environment:
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
     ports:
       - "9001:9001"
       - "9000:9000"
     volumes:
       - minio_data:/data
-    command: minio server /data --console-address ":9001"
+    command: server /data --console-address ":9001"
+    restart: unless-stopped
 
   # 视频指纹识别应用
   video-fingerprint:
